--- a/BackEnd/后端技术框架.md
+++ b/BackEnd/后端技术框架.md
@@ -14,3 +14,22 @@ Spring boot
 - redis
 - Spring boot
 - Spring Cloud
+
+
+
+
+
+**核心基础**：Java基础→MySQL→JDBC→JavaWeb
+
+**微服务核心**：Maven→Gradle→Spring6→SpringMVC→MyBatis→MyBatisPlus→SSM→Redis7→SpringBoot2→SpringCloud
+
+**微服务生态**：Git→Docker→Elasticsearch→ZooKeeper→Nginx→SpringSecurity→ActiveMQ→RabbitMQ→RocketMQ→K8S
+
+→MySQL面试题→大厂面试题第2季→大厂面试题第3季
+
+
+
+
+
+
+
