--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,14 +1,4 @@
-# ETL
-
-- 全称
-
-  **ETL**，是英文Extract-Transform-Load的缩写，用来描述将数据从来源端经过抽取（extract）、转换（transform）、加载（load）至目的端的过程。
-
-  **ETL**一词较常用在数据仓库，但其对象并不限于数据仓库。
-
-
-
-
+# 正则表达式
 
 ## 正则匹配全部汇总
 
@@ -34,7 +24,7 @@
 13、匹配首尾空白字符的正则表达式：^s*|s*$
    评注：可以用来删除行首行尾的空白字符串(包括空格、制表符、换页符)，非常有用的表达式
 14、匹配Email地址的正则表达式：
-       ^[a-zA-Z0-9][\w\.-]*[a-zA-Z0-9]@[a-zA-Z0-9][\w\.-]*[a-ZA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-ZA-Z]$
+    ^[a-zA-Z0-9][\w\.-]*[a-zA-Z0-9]@[a-zA-Z0-9][\w\.-]*[a-ZA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-ZA-Z]$
    评注：表单验证时很实用
 15、手机号：^((13[0-9])|(14[0-9])|(15[0-9])|(17[0-9])|(18[0-9]))\d{8}$
 16、身份证号：(^\d{15}$)|(^\d{17}([0-9]|X|x)$)
@@ -42,12 +32,6 @@
    评注：网上流传的版本功能很有限,上面这个基本可以满足需求
 18、匹配账号是否合法(字母开头，允许5-16字节，允许字字母数字下划线)：^[a-zA-Z][a-zA-Z0-9_]{4,15}$
 ```
-
-<img src="./images/022.jpg" alt="image" style="zoom:80%;" />
-
-<img src="./images/023.jpg" alt="images" style="zoom:80%;" />
-
-
 
 ## 一、校验数字的表达式
 
